overflow scroll for navbar
Added overflow scroll property for nabber

--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,7 @@ main {
   position: fixed;
   background-color: var(--bg-primary);
   transition: width 600ms ease;
+  overflow: scroll;
 }
 
 .navbar-nav {
