Replace Transition Var
.navbar class had a constant transition value, thus we weren't able to change that simply by modifying the previously declared --transition-speed variable

--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,7 @@ main {
 .navbar {
   position: fixed;
   background-color: var(--bg-primary);
-  transition: width 600ms ease;
+  transition: width var(--transition-speed) ease;
 }
 
 .navbar-nav {
