--- a/public/style.css
+++ b/public/style.css
@@ -73,8 +73,11 @@ main {
 }
 
 .link-text {
-  display: none;
+  display: inline;
   margin-left: 1rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity var(--transition-speed), visibility var(--transition-speed);
 }
 
 .nav-link svg {
@@ -145,6 +148,10 @@ main {
     justify-content: center;
   }
 
+  .link-text {
+    display: none;
+  }
+
   main {
     margin: 0;
   }
@@ -164,6 +171,8 @@ main {
 
   .navbar:hover .link-text {
     display: inline;
+    opacity: 1;
+    visibility: visible;
   }
 
   .navbar:hover .logo svg
